syntax = "proto3";
package douyin.extra.second;
option go_package = "../generated/message";

message douyin_message_action_request { // 用户发送消息操作请求
  string token = 1; // 用户鉴权token
  int64 to_user_id = 2; // 对方用户id
  int32 action_type = 3; // 1-发送消息
  string content = 4; // 消息内容
}

message douyin_message_action_response { // 用户发送消息操作响应
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}